# hangman

./: .gitignore  Hangman.cabal  Hangman.hs  INSTALL  Makefile  README  dictionary.txt  dictionary1.txt
